<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activity.MainActivity">
    <item android:id="@+id/game_item_menu"
        android:icon="@drawable/ic_game_icon_menu"
        android:title="@string/game_item_menu"
        app:showAsAction="always"/>
    <item android:id="@+id/top_item_menu"
        android:icon="@drawable/ic_top_icon_menu"
        android:title="@string/best_price_item_menu"
        app:showAsAction="always"/>
    <item android:id="@+id/low_price_item_menu"
        android:icon="@drawable/ic_low_cash_icon_menu"
        android:title="@string/low_price_menu"
        app:showAsAction="always"/>
    <item android:id="@+id/settings_item_menu"
        android:icon="@drawable/ic_settings_icon_menu"
        android:title="@string/settings_menu"
        app:showAsAction="never" />


</menu>